Fixed bg size on mobile devices...

--- a/app/assets/styles/modules/_full_image_section.css
+++ b/app/assets/styles/modules/_full_image_section.css
@@ -69,4 +69,5 @@
 
 #c-mariano{
     background-image: url('../../assets/images/cm_04.jpg');
+    background-size: 120% auto;
 }
